--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,19 @@
 {
-    "presets": [
-        [
-            "env",
-            {
-                "targets": {
-                    "node": "6.9.0",
-                    "browsers": ["chrome >= 54", "firefox ESR", "edge >= 12", "safari >= 10", "ie >= 11"]
-                },
-                "loose": true,
-                "modules": false,
-                "useBuiltIns": true,
-                "debug": false
-            }
-        ]
-    ],
-    "plugins": [],
-    "ignore": ["external/**/*"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        // "targets": {
+        //     "node": "6.9.0",
+        //     "browsers": ["chrome >= 54", "firefox ESR", "edge >= 12", "safari >= 10", "ie >= 11"]
+        // },
+        // "loose": true,
+        // "modules": false,
+        "useBuiltIns": "entry"
+        // "debug": false
+      }
+    ]
+  ],
+  "plugins": [],
+  "ignore": ["external/**/*"]
 }
